--- a/infrastructure-playbooks/dashboard.yml
+++ b/infrastructure-playbooks/dashboard.yml
@@ -32,7 +32,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: "{{ grafana_server_group_name }}"
+- hosts: "{{ grafana_server_group_name | default('grafana-servers') }}"
   become: true
   pre_tasks:
     - name: set ceph grafana install 'In Progress'
@@ -67,7 +67,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: "{{ groups[mgr_group_name] | default(groups[mon_group_name]) }}"
+- hosts: "{{ mgr_group_name | default('mgrs') }}"
   become: true
   pre_tasks:
     - name: set ceph dashboard install 'In Progress'
