--- a/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
+++ b/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
@@ -26,24 +26,25 @@
 
 
 - name: gather facts
-
   hosts:
-    - "{{ mon_group_name|default('mons') }}"
-    - "{{ mgr_group_name|default('mgrs') }}"
-    - "{{ osd_group_name|default('osds') }}"
-    - "{{ mds_group_name|default('mdss') }}"
-    - "{{ rgw_group_name|default('rgws') }}"
-    - "{{ rbdmirror_group_name|default('rbdmirrors') }}"
-    - "{{ nfs_group_name|default('nfss') }}"
-
+    - "{{ mon_group_name | default('mons') }}"
+    - "{{ mgr_group_name | default('mgrs') }}"
+    - "{{ osd_group_name | default('osds') }}"
+    - "{{ mds_group_name | default('mdss') }}"
+    - "{{ rgw_group_name | default('rgws') }}"
+    - "{{ rbdmirror_group_name | default('rbdmirrors') }}"
+    - "{{ nfs_group_name | default('nfss') }}"
   become: true
-
   tasks:
+    - import_role:
+        name: ceph-defaults
+
     - name: gather and delegate facts
       setup:
       delegate_to: "{{ item }}"
       delegate_facts: True
       with_items: "{{ groups['all'] }}"
+
 
 - name: switching from non-containerized to containerized ceph mon
   vars:
@@ -51,11 +52,14 @@
     health_mon_check_delay: 15
     containerized_deployment: true
     switch_to_containers: True
-    mon_group_name:       mons
-  hosts: "{{ mon_group_name|default('mons') }}"
+    mon_group_name: mons
+  hosts: "{{ mon_group_name | default('mons') }}"
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+
     - name: select a running monitor
       set_fact: mon_host={{ item }}
       with_items: "{{ groups[mon_group_name] }}"
@@ -144,17 +148,18 @@
       retries: "{{ health_mon_check_retries }}"
       delay: "{{ health_mon_check_delay }}"
 
+
 - name: switching from non-containerized to containerized ceph mgr
-
-  hosts: "{{ mgr_group_name|default('mgrs') }}"
-
+  hosts: "{{ mgr_group_name | default('mgrs') }}"
   vars:
     containerized_deployment: true
     mgr_group_name: mgrs
-
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+
     # failed_when: false is here because if we're
     # working with a jewel cluster then ceph mgr
     # will not exist
@@ -209,19 +214,15 @@
 
 
 - name: switching from non-containerized to containerized ceph osd
-
   vars:
     health_osd_check_retries: 5
     health_osd_check_delay: 15
     containerized_deployment: true
     osd_group_name: osds
-
-  hosts: "{{ osd_group_name|default('osds') }}"
-
+  hosts: "{{ osd_group_name | default('osds') }}"
   serial: 1
   become: true
   pre_tasks:
-
     - import_role:
         name: ceph-defaults
 
@@ -344,16 +345,14 @@
 
 
 - name: switching from non-containerized to containerized ceph mds
-
-  hosts: "{{ mds_group_name|default('mdss') }}"
-
+  hosts: "{{ mds_group_name | default('mdss') }}"
   vars:
     containerized_deployment: true
-    mds_group_name: mdss
-
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
 
     - name: stop non-containerized ceph mds(s)
       service:
@@ -405,16 +404,15 @@
 
 
 - name: switching from non-containerized to containerized ceph rgw
-
-  hosts: "{{ rgw_group_name|default('rgws') }}"
-
+  hosts: "{{ rgw_group_name | default('rgws') }}"
   vars:
     containerized_deployment: true
-    rgw_group_name: rgws
-
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+
     - set_fact:
         ceph_uid: 64045
       when: ceph_docker_image_tag | string is match("latest") or ceph_docker_image_tag | string is search("ubuntu")
@@ -463,16 +461,15 @@
 
 
 - name: switching from non-containerized to containerized ceph rbd-mirror
-
-  hosts: "{{ rbdmirror_group_name|default('rbdmirrors') }}"
-
+  hosts: "{{ rbdmirror_group_name | default('rbdmirrors') }}"
   vars:
     containerized_deployment: true
-    rbdmirror_group_name: rbdmirrors
-
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+
     - name: stop non-containerized ceph rbd mirror(s)
       service:
         name: "ceph-rbd-mirror@rbd-mirror.{{ ansible_hostname }}"
@@ -523,16 +520,14 @@
 
 
 - name: switching from non-containerized to containerized ceph nfs
-
-  hosts: "{{ nfs_group_name|default('nfss') }}"
-
+  hosts: "{{ nfs_group_name | default('nfss') }}"
   vars:
     containerized_deployment: true
-    nfs_group_name: nfss
-
   serial: 1
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
 
     # failed_when: false is here because if we're
     # working with a jewel cluster then ceph nfs
