--- a/roles/ceph-rgw/tasks/multisite/master.yml
+++ b/roles/ceph-rgw/tasks/multisite/master.yml
@@ -1,32 +1,90 @@
 ---
-- name: create the realm
-  command: "{{ container_exec_cmd }} radosgw-admin realm create --rgw-realm={{ rgw_realm }} --default"
+- name: create default realm
+  command: "{{ container_exec_cmd }} radosgw-admin realm create --rgw-realm={{ item.realm }} --default"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  when: "'No such file or directory' in realmcheck.stderr"
+  with_items: "{{ realms }}"
+  when: 
+    - realms is defined
+    - realms|length == 1
 
-- name: create the zonegroup
-  command: "{{ container_exec_cmd }} radosgw-admin zonegroup create --rgw-zonegroup={{ rgw_zonegroup }} --endpoints={{ rgw_multisite_proto }}://{{ rgw_multisite_endpoint_addr }}:{{ radosgw_frontend_port }} --master --default"
+- name: create the realm(s)
+  command: "{{ container_exec_cmd }} radosgw-admin realm create --rgw-realm={{ item.realm }}"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  when: "'No such file or directory' in zonegroupcheck.stderr"
+  with_items: "{{ realms }}"
+  when: 
+    - realms is defined
+    - realms|length > 1
 
-- name: create the zone
-  command: "{{ container_exec_cmd }} radosgw-admin zone create --rgw-zonegroup={{ rgw_zonegroup }} --rgw-zone={{ rgw_zone }} --endpoints={{ rgw_multisite_proto }}://{{ rgw_multisite_endpoint_addr }}:{{ radosgw_frontend_port }} --access-key={{ system_access_key }} --secret={{ system_secret_key }} --default --master"
+- name: create default master zonegroup(s)
+  command: "{{ container_exec_cmd }} radosgw-admin zonegroup create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --endpoints={{ item.endpoint }} --default --master"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  when: "'No such file or directory' in zonecheck.stderr"
+  with_items: "{{ zonegroups }}"
+  when: 
+    - zonegroups is defined
+    - item.is_default == true and item.is_master == true
 
-- name: create the zone user
-  command: "{{ container_exec_cmd }} radosgw-admin user create --uid={{ rgw_zone_user }} --display-name=\"Zone User\" --access-key={{ system_access_key }} --secret={{ system_secret_key }} --system"
+- name: create default zonegroup(s)
+  command: "{{ container_exec_cmd }} radosgw-admin zonegroup create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --endpoints={{ item.endpoint }} --default"
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
-  when: "'could not fetch user info: no user info saved' in usercheck.stderr"
-  notify: update period
+  with_items: "{{ zonegroups }}"
+  when: 
+    - zonegroups is defined
+    - item.is_default == true and item.is_master == false
+
+- name: create master zonegroup(s)
+  command: "{{ container_exec_cmd }} radosgw-admin zonegroup create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --endpoints={{ item.endpoint }} --master"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  run_once: true
+  with_items: "{{ zonegroups }}"
+  when: 
+    - zonegroups is defined
+    - item.is_default == false and item.is_master == true
+
+- name: create non-master non-default zonegroup(s)
+  command: "{{ container_exec_cmd }} radosgw-admin zonegroup create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --endpoints={{ item.endpoint }}"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  run_once: true
+  with_items: "{{ zonegroups }}"
+  when: 
+    - zonegroups is defined
+    - item.is_default == false and item.is_master == false
+
+- name: create the default master zone
+  command: "{{ container_exec_cmd }} radosgw-admin zone create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --rgw-zone={{ item.zone }} --endpoints={{ item.endpoint }} --access-key={{ item.access_key }} --secret={{ item.secret_key }} --master --default"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  run_once: true
+  with_items: "{{ zones }}"
+  when: 
+    - zones is defined
+    - item.is_master == true and item.is_default == true
+
+- name: create the default zone
+  command: "{{ container_exec_cmd }} radosgw-admin zone create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --rgw-zone={{ item.zone }} --endpoints={{ item.endpoint }} --access-key={{ item.access_key }} --secret={{ item.secret_key }} --default"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  run_once: true
+  with_items: "{{ zones }}"
+  when: 
+    - zones is defined
+    - item.is_master == false and item.is_default == true
+
+- name: create the master zone(s)
+  command: "{{ container_exec_cmd }} radosgw-admin zone create --rgw-realm={{ item.realm }} --rgw-zonegroup={{ item.zonegroup }} --rgw-zone={{ item.zone }} --endpoints={{ item.endpoint }} --access-key={{ item.access_key }} --secret={{ item.secret_key }} --master"
+  delegate_to: "{{ groups[mon_group_name][0] }}"
+  run_once: true
+  with_items: "{{ zones }}"
+  when: 
+    - zones is defined
+    - item.is_master == true and item.is_default == false
+
+- name: include_tasks create_master_zone_user.yml
+  include_tasks: create_master_zone_user.yml
 
 - name: add other endpoints to the zone
-  command: "{{ container_exec_cmd }} radosgw-admin zone modify --rgw-zone={{ rgw_zone }} --endpoints {{ rgw_multisite_endpoints_list }}"
+  command: "{{ container_exec_cmd }} radosgw-admin zone modify --rgw-realm={{ rgw_realm }} --rgw-zonegroup={{ rgw_zonegroup }} --rgw-zone={{ rgw_zone }} --endpoints {{ rgw_multisite_endpoints_list }}"
   delegate_to: "{{ groups[mon_group_name][0] }}"
-  run_once: true
   when: rgw_multisite_endpoints_list is defined
   notify: update period
